-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
None
-
Fully Compatible
-
ALL
-
Repl 2021-02-22
-
17
-
None
-
None
-
None
-
None
-
None
-
None
-
None
This is unintuitive when writing tests that use the 'hangAfterInitializingIndexBuild' fialpoint because shouldFail() and pauseWhileSet() both increment the 'timesEntered' counter by 1. This can lead to unintended races in our tests that rely on the failpoint 'waitForTimesEntered' command. We should remove the shouldFail since pauseWhileSet already does that check internally.