SERVER-54517 Remove redundant 'shouldFail()' around pauseWhileSet() for hangAfterInitializingIndexBuild failpoint